[gd_scene load_steps=17 format=3 uid="uid://chixvt8rmbiiq"]

[ext_resource type="Texture2D" uid="uid://coogi0s34rgme" path="res://Graphics/Enemy/CrocGuy.png" id="1_5dqcs"]
[ext_resource type="Script" uid="uid://b7dkjslnvwgab" path="res://Scripts/Enemies/croc_guy_enemy.gd" id="1_seyfl"]
[ext_resource type="PackedScene" uid="uid://dirwp38w8mv8g" path="res://Scenes/Components/run_component.tscn" id="2_mg0j5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_seyfl"]
atlas = ExtResource("1_5dqcs")
region = Rect2(51, 67, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg0j5"]
atlas = ExtResource("1_5dqcs")
region = Rect2(51, 34, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fah6q"]
atlas = ExtResource("1_5dqcs")
region = Rect2(51, 1, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_figuu"]
atlas = ExtResource("1_5dqcs")
region = Rect2(76, 1, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfqju"]
atlas = ExtResource("1_5dqcs")
region = Rect2(1, 67, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1tvp"]
atlas = ExtResource("1_5dqcs")
region = Rect2(26, 67, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17n4b"]
atlas = ExtResource("1_5dqcs")
region = Rect2(1, 34, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muxml"]
atlas = ExtResource("1_5dqcs")
region = Rect2(26, 34, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw1qt"]
atlas = ExtResource("1_5dqcs")
region = Rect2(1, 1, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj87k"]
atlas = ExtResource("1_5dqcs")
region = Rect2(26, 1, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wwmqq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_seyfl")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg0j5")
}],
"loop": true,
"name": &"SwimIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fah6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_figuu")
}],
"loop": false,
"name": &"SwimStroke",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfqju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1tvp")
}],
"loop": true,
"name": &"Walk1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17n4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muxml")
}],
"loop": true,
"name": &"Walk2",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw1qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj87k")
}],
"loop": true,
"name": &"Walk3",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvemj"]
size = Vector2(10, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ge02"]
size = Vector2(10, 24)

[node name="CrocGuyEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_seyfl")

[node name="RunComponent" parent="." instance=ExtResource("2_mg0j5")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wwmqq")
animation = &"Walk3"
autoplay = "Walk3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_dvemj")

[node name="InteractionHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_1ge02")
debug_color = Color(0.655796, 0.323474, 1, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(7.6, 4.7)

[node name="DryTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SwimTimer" type="Timer" parent="."]
wait_time = 0.6

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="InteractionHitbox" to="." method="_on_interaction_hitbox_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DryTimer" to="." method="_on_dry_timer_timeout"]
[connection signal="timeout" from="SwimTimer" to="." method="_on_swim_timer_timeout"]
